# squeezelite-MuseLuxe

./: CMakeLists.txt  Dockerfile  Makefile  Makefile_std.mk  README.md  TODO  build_flash_cmd.sh  flash_cmd.txt  generate_debug_scripts.cmake  makeBuildDocs.sh  repo.xml  sdkconfig  sdkconfig-backup  sdkconfig.defaults  sdkconfig.old  sdkconfig_minimal  squeezelite.cmake  version.txt
build-scripts/: ESP32-A1S-sdkconfig.defaults  SqueezeAmp-sdkconfig.defaults
components/audio/: CMakeLists.txt  component.mk  link_helper.c
components/audio/inc/: esp_equalizer.h
components/codecs/: CMakeLists.txt  component.mk
components/codecs/inc/FLAC/: all.h
components/codecs/inc/alac/: alac_wrapper.h
components/display/: CMakeLists.txt  ILI9341.c  SH1106.c  SSD1351.c  SSD1675.c  ST77xx.c  component.mk  display.c  display.h
components/display/core/: gds.c  gds.h  gds_font.c  gds_font.h  gds_image.c  gds_private.h  gds_text.c  gds_text.h
components/display/core/ifaces/: default_if_i2c.c  default_if_spi.c
components/display/fonts/: font_line_1.c
components/driver_bt/: CMakeLists.txt  bt_app_core.c  bt_app_core.h  bt_app_sink.c  bt_app_source.c  component.mk
components/esp_http_server/: CMakeLists.txt  Kconfig  osal.h
components/platform_config/: CMakeLists.txt  component.mk  nvs_utilities.c  nvs_utilities.h  platform_config.c  platform_config.h
components/platform_console/: CMakeLists.txt  cmd_config.c  cmd_config.h  cmd_decl.h  cmd_i2ctools.c  cmd_nvs.c  cmd_nvs.h  cmd_ota.c  cmd_ota.h  cmd_system.c  cmd_system.h  cmd_wifi.c  cmd_wifi.h  component.mk  platform_console.c  platform_console.h
components/platform_console/app_recovery/: CMakeLists.txt  application_name.h  recovery.c
components/platform_console/app_squeezelite/: CMakeLists.txt  cmd_squeezelite.c
components/platform_console/test/: CMakeLists.txt  test_system.c
components/raop/: CMakeLists.txt  component.mk  platform.h  raop.c  raop.h  raop_sink.c  raop_sink.h  rtp.c  rtp.h  util.c  util.h
components/services/: CMakeLists.txt  accessors.c  accessors.h  audio_controls.c  audio_controls.h  battery.c  battery.h  buttons.c  buttons.h  component.mk  globdefs.h  gpio_exp.c  gpio_exp.h  i2s.c  infrared.c  infrared.h  led.c  led.h  messaging.c  messaging.h  monitor.c  monitor.h  rotary_encoder.c  services.c
components/squeezelite/: CMakeLists.txt  adac.h  adac_core.c  alac.c  buffer.c  component.mk  controls.c  controls.h  decode.c  decode_external.c  displayer.c  embedded.c  embedded.h  equalizer.c  equalizer.h  flac.c  helix-aac.c  mad.c  main.c  opus.c  output.c  output_bt.c  output_embedded.c  output_i2s.c  output_pack.c  output_visu.c  pcm.c  slimproto.c  slimproto.h  squeezelite.h  stream.c  utils.c  vorbis.c  vu.data
components/squeezelite-ota/: CMakeLists.txt  component.mk  protocol_examples_common.h  squeezelite-ota.c  squeezelite-ota.h
components/squeezelite/ac101/: ac101.c
components/squeezelite/tas57xx/: dac_5713.c  dac_57xx.c
components/squeezelite/wm8978/: wm8978.c
components/telnet/: CMakeLists.txt  component.mk  telnet.c  telnet.h
components/tools/: CMakeLists.txt  component.mk  operator.cpp  perf_trace.h  platform_esp32.h  tools.c  tools.h  trace.h
components/wifi-manager/: CMakeLists.txt  Kconfig.projbuild  component.mk  dns_server.c  dns_server.h  http_server_handlers.c  http_server_handlers.h  wifi_manager.c  wifi_manager.h  wifi_manager_http_server.c
components/wifi-manager/webapp/: .babelrc  .eslintcache  .eslintrc  .eslintrc.json.back  LICENSE  README.md  package.json  test.js  tsconfig.json  tslint.json  webapp.cmake  webpack.c  webpack.h
components/wifi-manager/webapp/config/: .stylelintrc
components/wifi-manager/webapp/mock/: ap.json  commands.json  config.json  messages.json  messages_ota.json  messages_ota_fail.json  messages_ota_flash.json  messages_testing.json  status-messages.json  status.json  statusdefinition.json
components/wifi-manager/webapp/src/: .htaccess  index.ejs  index.ts  test.ejs  test.ts
components/wifi-manager/webapp/src/js/: custom.js  test.js
components/wifi-manager/webapp/src/sass/: main.scss
components/wifi-manager/webapp/src/sass/layout/: _features.scss
components/wifi-manager/webapp/src/sass/setup/: _normalize.scss
components/wifi-manager/webapp/src/sass/utils/: _mixins.scss  _style.css
components/wifi-manager/webapp/webpack/: postcss.config.js  webpack.common.js  webpack.dev.js  webpack.prod.js
main/: CMakeLists.txt  Kconfig.projbuild  Params.txt  component.mk  esp_app_main.c  platform_esp32.h
plugin/: repo.xml
plugin/SqueezeESP32/: FirmwareHelper.pm  Graphics.pm  Player.pm  PlayerSettings.pm  Plugin.pm  Text.pm  install.xml  strings.txt
plugin/SqueezeESP32/HTML/EN/plugins/SqueezeESP32/settings/: player.html
server_certs/: getcert.sh  github.pem
test/: CMakelists.txt
test/main/: CMakeLists.txt  unit_tests.c
